--- a/style.css
+++ b/style.css
@@ -6,52 +6,13 @@
 html,body{
     height:100%;
     width: 100%;
+    perspective:500px;
 }
-#main{
-    height: 100%;
-    width: 100%;
-    background-color: rgb(111, 173, 180);
-    padding: 10px;
-}
-.card{
-    height: 300px;
-    width: 250px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 10%;
-    box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.341);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    padding: 20px;
-}
-.card img{
-    height: 100px;
-    width: 100px;
-    object-fit: cover;
-    border-radius: 50%;
-}
-.card h2{
-    font-weight: 200;
-    font-size: 25px;
-}
-.card p{
-    font-size: 14px;
-    font-weight: 600;
-    color: #888;
-    text-align: center;
-}
-.card button{
-    border-radius: 50px;
-    padding: 10px 30px;
-    background-color: aqua;
-    border: none;
-    color: white;
-    font-weight: 600;
-    border: 2px solid aqua;
-    cursor: pointer;
-}
-.card button:hover{
-    color: aqua;
-    background-color: transparent
+img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 500px;
+    width: 600px;
+    transform: rotateX(60deg);
 }
