--- a/style.css
+++ b/style.css
@@ -8,11 +8,16 @@ html,body{
     width: 100%;
     perspective:500px;
 }
-img{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 500px;
-    width: 600px;
-    transform: rotateX(60deg);
+#parent{
+    height: 100%;
+    width: 100%;
+    background-color: black;
+  
+}
+
+h1{
+    font-size: 500;
+    font-weight: 600;
+    color: white;
+    -webkit-text-stroke: 1px red;
 }
